--- a/crwn-clothing/src/Component/menu-items.styles.css
+++ b/crwn-clothing/src/Component/menu-items.styles.css
@@ -1,18 +1,4 @@
-.homepage {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px 80px;
-  }
-  
-  .directory-menu {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-  
-  .menu-item {
+.menu-item {
     min-width: 30%;
     height: 240px;
     flex: 1 1 auto;
@@ -20,10 +6,12 @@
     align-items: center;
     justify-content: center;
     border: 1px solid black;
-    margin: 0 7.5px 15px;
-  
-  }
-  
+    margin: 0 7.5px 15px; 
+    background-position: center ;
+    background-size: cover;
+    
+}
+      
     .content {
       height: 90px;
       padding: 0 25px;
@@ -32,6 +20,7 @@
       align-items: center;
       justify-content: center;
       border: 1px solid black;
+      opacity: 0.9;
     }
       .title {
         font-weight: bold;
@@ -44,5 +33,16 @@
         font-weight: lighter;
         font-size: 16px;
       }
-    
+      a:hover {
+        cursor: pointer;
+      }
+      a:background-image {
+        transform: scale(1.1);
+        transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
+      }
+        a::content {
+          opacity: 0.9;
+        }
+        
+        
   
